--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ disqus_short_name: dsrg
 disqus_show_comment_count: false
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-968607-14
 
 # Facebook Like
 facebook_like: false
