change author to something more general

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 url: http://pdos.csail.mit.edu/dsrg
 title: DSRG
 subtitle: Distributed systems reading group at MIT
-author: PDOS
+author: DSRG
 simple_search: http://google.com/search
 description:
 
