Add makefile for build+deploy

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ url: "http://dsrg.pdos.csail.mit.edu"
 # Build settings
 markdown: kramdown
 
-exclude: [vendor]
+exclude: ['vendor', 'Makefile', 'Gemfile.lock', 'Gemfile']
 
 gems:
   - octopress-solarized
