Now that we use a domain, no need to set baseurl

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: >
   the 9th floor of Stata to discuss distributed systems research papers, and
   cover papers from conferences like SOSP, OSDI, PODC, VLDB, and SIGMOD. We try
   to have a healthy mix of current systems papers and older seminal papers.
-baseurl: "/dsrg"
+baseurl: ""
 url: "http://mit-pdos.github.io"
 
 # Build settings
