Clean-up of all previous posts
This includes (but is not limited to):
 - Removing unused front-matter tags
 - Using MathJax for formulas
 - Replacing <code> and <pre> with ` and ```
 - Fixing broken headlines (no space after #, wrong number of #s)
 - Spelling errors
 - s/--/---/

--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,9 @@ url: "http://dsrg.pdos.csail.mit.edu"
 
 # Build settings
 markdown: kramdown
+kramdown:
+  input: GFM
+  hard_wrap: false
 
 exclude: ['vendor', 'Makefile', 'Gemfile.lock', 'Gemfile']
 
